Fix keyboard only navigation on ie11/edge
Refs COMMS-1373

Test Plan:
  * Open ie11, edge, and chrome.
  * On each browser, insure you can use keyboard only navigation to get
    to the table with the permisssion buttons
  * Make sure that when tabbing through the table there is a focus
    outline indicating where the focus is at
  * In ie11 specifically, make sure that hitting tab will take you from
    one button to the next button. There should not be a `dead` zone
    between buttons

Reviewed-on: https://gerrit.instructure.com/161862
Tested-by: Jenkins
QA-Review: KC Naegle <knaegle@instructure.com>
Product-Review: Landon Gilbert-Bland <lbland@instructure.com>

--- a/app/stylesheets/bundles/permissions.scss
+++ b/app/stylesheets/bundles/permissions.scss
@@ -37,7 +37,7 @@ $darkRowBg: #f9f9f9;
   }
   button {
     @include ic-focus-base;
-    &:focus-within {
+    &:focus {
       @include ic-focus-variant;
     }
     border: none;
